--- a/rapidast-integration-test.yaml
+++ b/rapidast-integration-test.yaml
@@ -179,19 +179,102 @@ spec:
         env:
         - name: KUBECONFIG
           value: "/credentials/$(steps.get-kubeconfig.results.kubeconfig)"
+        - name: NAMESPACE
+          value: "$(params.namespace)"
         volumeMounts:
         - name: credentials
           mountPath: /credentials
-        args:
-        - run
-        - bundle
-        - --security-context-config
-        - restricted
-        - --namespace
-        - "$(params.namespace)"
-        - --timeout
-        - "$(params.installTimeout)"
-        - "$(params.bundleImage)"
+        script: |
+          #!/bin/bash
+          set -euo pipefail
+          
+          echo "Starting operator bundle installation..."
+          echo "Bundle: $(params.bundleImage)"
+          echo "Namespace: $NAMESPACE"
+          echo "Timeout: $(params.installTimeout)"
+          
+          # Function to capture debugging information
+          capture_debug_info() {
+            echo "=========================================="
+            echo "DEBUGGING INFORMATION - OPERATOR INSTALLATION FAILED"
+            echo "=========================================="
+            
+            echo "=== NAMESPACE STATUS ==="
+            kubectl get namespace "$NAMESPACE" -o yaml || true
+            
+            echo "=== DEPLOYMENTS ==="
+            kubectl get deployments -n "$NAMESPACE" -o wide || true
+            
+            echo "=== PODS ==="
+            kubectl get pods -n "$NAMESPACE" -o wide || true
+            
+            echo "=== EVENTS ==="
+            kubectl get events -n "$NAMESPACE" --sort-by=.metadata.creationTimestamp || true
+            
+            echo "=== CSVS ==="
+            kubectl get csv -n "$NAMESPACE" -o wide || true
+            
+            echo "=== SUBSCRIPTIONS ==="
+            kubectl get subscriptions -n "$NAMESPACE" -o wide || true
+            
+            echo "=== CATALOG SOURCES ==="
+            kubectl get catalogsources -n "$NAMESPACE" -o wide || true
+            
+            echo "=== OPERATOR GROUPS ==="
+            kubectl get operatorgroups -n "$NAMESPACE" -o wide || true
+            
+            echo "=== INSTALL PLANS ==="
+            kubectl get installplans -n "$NAMESPACE" -o wide || true
+            
+            # Get detailed status of any failed pods
+            echo "=== FAILED POD DETAILS ==="
+            for pod in $(kubectl get pods -n "$NAMESPACE" --field-selector=status.phase=Failed -o name 2>/dev/null || true); do
+              echo "--- Pod: $pod ---"
+              kubectl describe "$pod" -n "$NAMESPACE" || true
+              echo "--- Pod Logs: $pod ---"
+              kubectl logs "$pod" -n "$NAMESPACE" --previous=true || true
+              kubectl logs "$pod" -n "$NAMESPACE" || true
+            done
+            
+            # Get details of pods that are not running
+            echo "=== NON-RUNNING POD DETAILS ==="
+            for pod in $(kubectl get pods -n "$NAMESPACE" --field-selector=status.phase!=Running,status.phase!=Succeeded -o name 2>/dev/null || true); do
+              echo "--- Pod: $pod ---"
+              kubectl describe "$pod" -n "$NAMESPACE" || true
+              echo "--- Pod Logs: $pod ---"
+              kubectl logs "$pod" -n "$NAMESPACE" --previous=true || true
+              kubectl logs "$pod" -n "$NAMESPACE" || true
+            done
+            
+            # Get CSV details if they exist
+            echo "=== CSV DETAILS ==="
+            for csv in $(kubectl get csv -n "$NAMESPACE" -o name 2>/dev/null || true); do
+              echo "--- CSV: $csv ---"
+              kubectl describe "$csv" -n "$NAMESPACE" || true
+              kubectl get "$csv" -n "$NAMESPACE" -o yaml || true
+            done
+            
+            echo "=========================================="
+            echo "END DEBUGGING INFORMATION"
+            echo "=========================================="
+          }
+          
+          # Set up trap to capture debug info on failure
+          trap 'capture_debug_info' ERR
+          
+          # Run operator-sdk with explicit error handling
+          if ! operator-sdk run bundle \
+            --security-context-config restricted \
+            --namespace "$NAMESPACE" \
+            --timeout "$(params.installTimeout)" \
+            "$(params.bundleImage)"; then
+            
+            echo "ERROR: operator-sdk run bundle failed"
+            capture_debug_info
+            exit 1
+          fi
+          
+          echo "Operator bundle installation completed successfully!"
   - name: configure-keda
     runAfter:
     - deploy-operator
