--- a/rapidast-integration-test.yaml
+++ b/rapidast-integration-test.yaml
@@ -166,7 +166,7 @@ spec:
           
           # Apply IDMS to mirror production image references to build artifacts
           oc apply -f - <<EOF
-          apiVersion: operator.openshift.io/v1alpha1
+          apiVersion: config.openshift.io/v1
           kind: ImageDigestMirrorSet
           metadata:
             name: cma-test-mirror-set
