--- a/rapidast-integration-test.yaml
+++ b/rapidast-integration-test.yaml
@@ -403,9 +403,61 @@ spec:
     params:
     - name: namespace
       value: "$(params.NAMESPACE)"
-  - name: rapidast-check
+
+  - name: prepare-cluster-credentials
     runAfter:
     - configure-keda
+    taskSpec:
+      results:
+      - name: kubeconfig-secret
+        description: Secret name containing ephemeral cluster kubeconfig
+      volumes:
+      - name: credentials
+        emptyDir: {}
+      steps:
+      - name: get-kubeconfig
+        ref:
+          resolver: git
+          params:
+          - name: url
+            value: https://github.com/konflux-ci/build-definitions.git
+          - name: revision
+            value: main
+          - name: pathInRepo
+            value: stepactions/eaas-get-ephemeral-cluster-credentials/0.1/eaas-get-ephemeral-cluster-credentials.yaml
+        params:
+        - name: eaasSpaceSecretRef
+          value: $(tasks.provision-eaas-space.results.secretRef)
+        - name: clusterName
+          value: "$(tasks.provision-cluster.results.clusterName)"
+        - name: credentials
+          value: credentials
+      - name: create-kubeconfig-secret
+        image: quay.io/konflux-ci/konflux-test:latest
+        env:
+        - name: KUBECONFIG_FILE
+          value: "/credentials/$(steps.get-kubeconfig.results.kubeconfig)"
+        volumeMounts:
+        - name: credentials
+          mountPath: /credentials
+        script: |
+          #!/bin/bash
+          set -euxo pipefail
+          
+          # Create a secret with the ephemeral cluster kubeconfig for RapiDAST
+          SECRET_NAME="rapidast-cluster-credentials-$(date +%s)"
+          
+          echo "Creating secret $SECRET_NAME with ephemeral cluster kubeconfig..."
+          oc create secret generic "$SECRET_NAME" \
+            --from-file=kubeconfig="$KUBECONFIG_FILE" \
+            --dry-run=client -o yaml | oc apply -f -
+            
+          echo "Secret created successfully"
+          echo -n "$SECRET_NAME" | tee "$(results.kubeconfig-secret.path)"
+
+  - name: rapidast-check
+    runAfter:
+    - prepare-cluster-credentials
     taskRef:
       resolver: git
       params:
@@ -417,7 +469,7 @@ spec:
         value: examples/konflux/rapidast-check.yaml
     params:
     - name: KUBECONFIG_SECRET
-      value: "$(tasks.provision-eaas-space.results.secretRef)"
+      value: "$(tasks.prepare-cluster-credentials.results.kubeconfig-secret)"
     - name: PORT_FORWARD_TARGETS
       value: "service/keda-metrics-apiserver -n $(params.NAMESPACE) 9443:9443,service/keda-operator-metrics-service -n $(params.NAMESPACE) 8080:8080"
     - name: RAPIDAST_CONFIG_VALUE
